# viz-fractal-curve

./: README.md
FractalGlyph/: Cargo.toml  Makefile  vis_points.py
FractalGlyph/src/: accuracy.rs  barycenter.rs  gosper.rs  main.rs  prelude.rs  quality.rs  reader.rs
FractalGlyph/test_pixel_graph/: Data check.ipynb  Makefile  fashion_mnist.py  schema
FractalGlyph/test_pixel_graph/data/dlenet-fashion/: 00_L_lambda.csv  01_R_conv2d0.csv  02_L_conv2d0.csv  03_R_relu0.csv  04_L_relu0.csv  05_R_conv2d1.csv  06_L_conv2d1.csv  08_L_relu1.csv  09_R_flatten.csv  11_R_dense0.csv  12_L_dense0.csv  13_R_relu2.csv  14_L_relu2.csv  15_concatenate.csv  16_dense_1.csv  17_prediction.csv
FractalGlyph/test_pixel_graph/data/lenet-fashion/: 00_conv2d0.csv  01_relu0.csv  02_conv2d1.csv  04_flatten.csv  05_dense0.csv  06_relu.csv  07_dense1.csv  08_prediction.csv
FractalGlyph/test_pixel_graph/data/lenet-mnist/: 00_conv2d0.csv  01_relu0.csv  02_conv2d1.csv  03_relu1.csv  05_dense0.csv  06_relu2.csv  08_dense1.csv  09_prediction.csv
FractalGlyph/test_pixel_graph/data/vgg16-mnist/: 00_block1_conv1.csv  01_block1_conv2.csv  02_block1_pool.csv  03_block2_conv1.csv  04_block2_conv2.csv  05_block2_pool.csv  06_block3_conv1.csv  07_block3_conv2.csv  08_block3_conv3.csv  09_block3_pool.csv  10_block4_conv1.csv  11_block4_conv2.csv  12_block4_conv3.csv  13_block4_pool.csv  14_block5_conv1.csv  15_block5_conv2.csv  16_block5_conv3.csv  17_block5_pool.csv  19_dense0.csv  20_relu0.csv  21_dense1.csv  22_relu1.csv  23_dense2.csv  (+1 more)
matorder/: CMakeLists.txt  README.md
matorder/src/: order.cpp
