[package]
name = "FractalGlyph"
version = "0.2.0"
authors = ["Romain Giot <romain.Giot@u-bordeaux.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
hilbert = "0.1.1"
csv = "1.1.1"
image = "0.22.3"
itertools = "0.8.2"
serde = { version = "1.0.103", features = ["derive"] }
clap = "2.33.0"
spade = "1.8.1"
nalgebra = ">=0.11.0, <=0.18.*"
rayon = "1.3.0"
progress = "0.2"
num-complex = "0.2"
palette = "0.5.0"
